// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/dab callback returns correct output 1`] = `"https://tenor.com/view/bettywhite-dab-gif-5044603"`;

exports[`/data callback returns correct output 1`] = `
Object {
  "author": null,
  "color": 13407555,
  "description": "
Instead of asking if anyone can help you, ask your question outright so people can help you!
      
**Bad**: \\"Hey, does anyone know how to set CSS styles with Javascript?\\"
    
**Good**: 
\\"Hey, I'm having trouble setting CSS styles via Javascript.
  
Here's my code: 
\`\`\`Code snippet\`\`\`  
And here is the error I'm receiving:
\`Cannot set attribute 'style' of null\` \\"
  
**https://www.dontasktoask.com/**
        ",
  "fields": Array [],
  "footer": null,
  "image": null,
  "thumbnail": null,
  "timestamp": null,
  "title": "Don’t ask to ask!",
  "type": "rich",
  "url": "https://www.dontasktoask.com/",
}
`;

exports[`/fg callback returns correct output 1`] = `"**This is what you should have typed into Google >** <https://google.com/search?q=The+Odin+Project>"`;

exports[`/fu callback returns correct output 1`] = `"http://media.riffsy.com/images/636a97aa416ad674eb2b72d4a6e9ad6c/tenor.gif"`;

exports[`/gandalf callback returns correct output 1`] = `"http://emojis.slackmojis.com/emojis/images/1450458362/181/gandalf.gif"`;

exports[`/google callback returns correct output 1`] = `"**HERE YOU GO BABY >** <https://lmgtfy.com/?q=The+Odin+Project>"`;

exports[`/hug callback returns correct output 1`] = `"⊂(´・ω・｀⊂)"`;

exports[`/justdoit callback returns correct output 1`] = `"What are you waiting for?! https://www.youtube.com/watch?v=ZXsQAXx_ao0"`;

exports[`/lenny callback returns correct output 1`] = `"( ͡° ͜ʖ ͡°)"`;

exports[`/motivate callback returns correct output 1`] = `"Don't give up! https://www.youtube.com/watch?v=KxGRhd_iWuE"`;

exports[`/question callback returns correct output 1`] = `
Object {
  "author": null,
  "color": 13407555,
  "description": "We'd love to help you out! Check out this article to help others better understand your question: https://medium.com/@gordon_zhu/how-to-be-great-at-asking-questions-e37be04d0603",
  "fields": Array [],
  "footer": null,
  "image": null,
  "thumbnail": null,
  "timestamp": null,
  "title": "Asking Great Questions",
  "type": "rich",
  "url": null,
}
`;

exports[`/smart callback returns correct output 1`] = `"f(ಠ‿↼)z"`;

exports[`/xy callback returns correct output 1`] = `"What problem are you *really* trying to solve? Check out this article to help others better understand your question: <https://xyproblem.info/>"`;
